--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,2 @@
 theme: jekyll-theme-architect
+title: Welcome to my WebApp! I am a beginner trying out new things here. Feel free to reach out to me if you have feedback.
